<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Geopin</string>
    <string name="facebook_app_id">938475192837084</string>
    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="error">Error! Something went wrong.</string>
    <string name="add_pin">Add Pin</string>
    <string name="edit_pin">Edit pin</string>
    <string name="placeholder">Lorem ipsum dolor sit amet.</string>
    <string name="no_maps">Maps are not available.</string>
    <string name="all_categories">All categories</string>
    <string name="no_location_check_gps">Location didn\'t found. Check your gps settings.</string>
    <string name="no_location_service">There\'s no activated location detection service.</string>
    <string name="no_location_service_in_device">There\'s no location services in your device.</string>
    <string name="by_car">Car</string>
    <string name="by_foot">By foot</string>
    <string name="by_transport">Transport</string>
    <string name="hide_pins">Hide Pins</string>
    <string name="show_pins">Show Pins</string>
    <string name="tap_to_pin">Please tap on the place where you want to add a pin.</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="title_hint">Enter a title&#8230;</string>
    <string name="description">Description</string>
    <string name="description_hint">Enter a description&#8230;</string>
    <string name="category">Category</string>
    <string name="title_required">The title field is required.</string>
    <string name="pin_saved">Pin saved successfully!</string>
    <string name="origin">Starting point</string>
    <string name="origin_hint">Choose a starting point&#8230;</string>
    <string name="destination">Destination</string>
    <string name="destination_hint">Choose a destination&#8230;</string>
    <string name="navigation">Navigation</string>
    <string name="get_instructions">Receive Instructions</string>
    <string name="tap_origin">Tap on map to choose starting point.</string>
    <string name="tap_destination">Tap on map to choose destination.</string>
    <string name="origin_required">The starting point field is required.</string>
    <string name="destination_required">The destination field is required.</string>
    <string name="address_not_found">The address didn\'t found.</string>
    <string name="title_activity_abstract_map">AbstractMapActivity</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="arrival_time">Arrival Time</string>
    <string name="options">Options</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="share">Share on Facebook</string>

    <string name="preferences">Preferences</string>
    <string name="language">Language</string>
    <string name="greek">Greek (Ελληνικά)</string>
    <string name="english">English</string>

    <string name="units">Units</string>
    <string name="metric">Metric (kilometers)</string>
    <string name="imperial">Imperial (miles)</string>

    <string name="generate_pins">Generate Pins</string>
    <string name="no_current_location">Current Location didn\'t found.</string>
    <string name="wait">Wait&#8230;</string>
    <string name="pins_generated">Pins generated successfully!</string>

</resources>
