<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainMapActivity">

    <item android:id="@+id/action_add_pin"
        android:icon="@drawable/ic_action_add_pin"
        android:title="@string/add_pin"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_show_hide"
        android:icon="@drawable/ic_action_action_visibility"
        android:title="@string/hide_pins"
        android:orderInCategory="2"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/action_get_directions"
        android:icon="@drawable/ic_action_directions"
        android:title="@string/get_instructions"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
</menu>
